[package]
name = "memleak"
version = "0.1.0"
edition = "2021"

[lib]
name = "memleak"
crate-type = ["dylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
libc = "0.2"
lazy_static = "1.4"
ctor = "0.6.1"
tracy-client = { version = "0.18.3", default-features = false, features = ["enable", "ondemand", "system-tracing", "sampling"] }
